gen/Angular/gen/AngularParser.java
// Generated from C:/Users/Omran/Documents/IntelliJ/Compiler/OmranProject/src/Angular/gen\AngularParser.g4 by ANTLR 4.10.1
package Angular.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TypeScriptComment=1, StartTypeScriptComment=2, AngularDecorator=3, Import=4, 
		From=5, Export=6, Class=7, Let=8, Const=9, Var=10, Return=11, Private=12, 
		Public=13, Protected=14, Constructor=15, Function=16, This=17, If=18, 
		Else=19, For=20, While=21, Of=22, MathOperator=23, Sign=24, Increment=25, 
		Decrement=26, PlusEqual=27, MinusEqual=28, Arrow=29, GreaterThan=30, GreaterOrEqual=31, 
		LessThan=32, LessOrEqual=33, ConditionalEqual=34, ConditionalNotEqual=35, 
		StrongConditionalEqual=36, StrongConditionalNotEqual=37, AndOperator=38, 
		OrOperator=39, String=40, Number=41, Boolean=42, Any=43, Void=44, True=45, 
		False=46, MultiLinesString=47, DoubleQuotationString=48, SingleQuotationString=49, 
		NUMBER=50, DIGIT=51, IDENTIFIER=52, WORD=53, Slash=54, BackSlash=55, Equal=56, 
		Star=57, Dash=58, Plus=59, Backtick=60, Dot=61, Comma=62, Colon=63, SemiColon=64, 
		AtSign=65, Ampersand=66, Pipe=67, ExclamationMark=68, QuestionMark=69, 
		LeftAngleBracket=70, RightAngleBracket=71, LeftParenthesis=72, RightParenthesis=73, 
		LeftCurlyBrace=74, RightCurlyBrace=75, LeftSquareBracket=76, RightSquareBracket=77, 
		SingleQuotation=78, DoubleQuotation=79, WhiteSpace=80, NewLine=81, SINGLE_QUOTATION_STRING_CONTENT=82, 
		DOUBLE_QUOTATION_STRING_CONTENT=83, MULTI_LINES_STRING_CONTENT=84, COMMENT_CONTENT=85;
	public static final int
		RULE_program = 0, RULE_importStatement = 1, RULE_importLibs = 2, RULE_component = 3, 
		RULE_componentMetaData = 4, RULE_componentMetaDataKey = 5, RULE_componentMetaDataValue = 6, 
		RULE_exportClass = 7, RULE_class = 8, RULE_export = 9, RULE_classBody = 10, 
		RULE_classAttribute = 11, RULE_classMethod = 12, RULE_block = 13, RULE_blockContent = 14, 
		RULE_variable = 15, RULE_variableDeclaration = 16, RULE_variableAccessing = 17, 
		RULE_variableChaining = 18, RULE_variableAssigning = 19, RULE_propertyAccessing = 20, 
		RULE_arrayElementAccessing = 21, RULE_function = 22, RULE_functionDeclaration = 23, 
		RULE_functionAccessing = 24, RULE_functionCall = 25, RULE_ifElseBlock = 26, 
		RULE_ifStatement = 27, RULE_ifElseStatement = 28, RULE_elseStatement = 29, 
		RULE_forBlock = 30, RULE_forStatment = 31, RULE_whileBlock = 32, RULE_whileStatement = 33, 
		RULE_conditions = 34, RULE_condition = 35, RULE_statement = 36, RULE_combiningOperator = 37, 
		RULE_conditionalOperator = 38, RULE_assigningOperator = 39, RULE_chainingOperator = 40, 
		RULE_arguments = 41, RULE_argument = 42, RULE_parameters = 43, RULE_parameter = 44, 
		RULE_declaration = 45, RULE_accessModifiers = 46, RULE_type = 47, RULE_identifier = 48, 
		RULE_objectType = 49, RULE_propertyType = 50, RULE_return = 51, RULE_value = 52, 
		RULE_string = 53, RULE_number = 54, RULE_boolean = 55, RULE_array = 56, 
		RULE_element = 57, RULE_object = 58, RULE_property = 59, RULE_anonymousFunction = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importStatement", "importLibs", "component", "componentMetaData", 
			"componentMetaDataKey", "componentMetaDataValue", "exportClass", "class", 
			"export", "classBody", "classAttribute", "classMethod", "block", "blockContent", 
			"variable", "variableDeclaration", "variableAccessing", "variableChaining", 
			"variableAssigning", "propertyAccessing", "arrayElementAccessing", "function", 
			"functionDeclaration", "functionAccessing", "functionCall", "ifElseBlock", 
			"ifStatement", "ifElseStatement", "elseStatement", "forBlock", "forStatment", 
			"whileBlock", "whileStatement", "conditions", "condition", "statement", 
			"combiningOperator", "conditionalOperator", "assigningOperator", "chainingOperator", 
			"arguments", "argument", "parameters", "parameter", "declaration", "accessModifiers", 
			"type", "identifier", "objectType", "propertyType", "return", "value", 
			"string", "number", "boolean", "array", "element", "object", "property", 
			"anonymousFunction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'import'", "'from'", "'export'", "'class'", 
			"'let'", "'const'", "'var'", "'return'", "'private'", "'public'", "'protected'", 
			"'constructor'", "'function'", "'this'", "'if'", "'else'", "'for'", "'while'", 
			"'of'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'string'", "'number'", "'boolean'", 
			"'any'", "'void'", "'true'", "'false'", null, null, null, null, null, 
			null, null, "'/'", "'\\'", "'='", "'*'", "'-'", "'+'", "'`'", "'.'", 
			"','", "':'", "';'", "'@'", "'&'", "'|'", "'!'", "'?'", "'<'", "'>'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "'''", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TypeScriptComment", "StartTypeScriptComment", "AngularDecorator", 
			"Import", "From", "Export", "Class", "Let", "Const", "Var", "Return", 
			"Private", "Public", "Protected", "Constructor", "Function", "This", 
			"If", "Else", "For", "While", "Of", "MathOperator", "Sign", "Increment", 
			"Decrement", "PlusEqual", "MinusEqual", "Arrow", "GreaterThan", "GreaterOrEqual", 
			"LessThan", "LessOrEqual", "ConditionalEqual", "ConditionalNotEqual", 
			"StrongConditionalEqual", "StrongConditionalNotEqual", "AndOperator", 
			"OrOperator", "String", "Number", "Boolean", "Any", "Void", "True", "False", 
			"MultiLinesString", "DoubleQuotationString", "SingleQuotationString", 
			"NUMBER", "DIGIT", "IDENTIFIER", "WORD", "Slash", "BackSlash", "Equal", 
			"Star", "Dash", "Plus", "Backtick", "Dot", "Comma", "Colon", "SemiColon", 
			"AtSign", "Ampersand", "Pipe", "ExclamationMark", "QuestionMark", "LeftAngleBracket", 
			"RightAngleBracket", "LeftParenthesis", "RightParenthesis", "LeftCurlyBrace", 
			"RightCurlyBrace", "LeftSquareBracket", "RightSquareBracket", "SingleQuotation", 
			"DoubleQuotation", "WhiteSpace", "NewLine", "SINGLE_QUOTATION_STRING_CONTENT", 
			"DOUBLE_QUOTATION_STRING_CONTENT", "MULTI_LINES_STRING_CONTENT", "COMMENT_CONTENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ExportClassContext exportClass() {
			return getRuleContext(ExportClassContext.class,0);
		}
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<ComponentContext> component() {
			return getRuleContexts(ComponentContext.class);
		}
		public ComponentContext component(int i) {
			return getRuleContext(ComponentContext.class,i);
		}
		public ClassContext class_() {
			return getRuleContext(ClassContext.class,0);
		}
		public ExportContext export() {
			return getRuleContext(ExportContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Import) {
				{
				{
				setState(122);
				importStatement();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AngularDecorator) {
				{
				{
				setState(128);
				component();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Export:
				{
				setState(134);
				exportClass();
				}
				break;
			case Class:
				{
				{
				setState(135);
				class_();
				setState(136);
				export();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(AngularParser.Import, 0); }
		public TerminalNode From() { return getToken(AngularParser.From, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(AngularParser.SemiColon, 0); }
		public List<ImportLibsContext> importLibs() {
			return getRuleContexts(ImportLibsContext.class);
		}
		public ImportLibsContext importLibs(int i) {
			return getRuleContext(ImportLibsContext.class,i);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(Import);
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141);
				importLibs();
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LeftCurlyBrace );
			setState(146);
			match(From);
			setState(147);
			string();
			setState(148);
			match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportLibsContext extends ParserRuleContext {
		public TerminalNode LeftCurlyBrace() { return getToken(AngularParser.LeftCurlyBrace, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode RightCurlyBrace() { return getToken(AngularParser.RightCurlyBrace, 0); }
		public List<TerminalNode> Comma() { return getTokens(AngularParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AngularParser.Comma, i);
		}
		public ImportLibsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importLibs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportLibs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportLibs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportLibs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportLibsContext importLibs() throws RecognitionException {
		ImportLibsContext _localctx = new ImportLibsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importLibs);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(LeftCurlyBrace);
			setState(156);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(151);
					identifier();
					setState(152);
					match(Comma);
					}
					} 
				}
				setState(158);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(159);
			identifier();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(160);
				match(Comma);
				}
			}

			setState(163);
			match(RightCurlyBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentContext extends ParserRuleContext {
		public TerminalNode AngularDecorator() { return getToken(AngularParser.AngularDecorator, 0); }
		public TerminalNode LeftParenthesis() { return getToken(AngularParser.LeftParenthesis, 0); }
		public TerminalNode LeftCurlyBrace() { return getToken(AngularParser.LeftCurlyBrace, 0); }
		public TerminalNode RightCurlyBrace() { return getToken(AngularParser.RightCurlyBrace, 0); }
		public TerminalNode RightParenthesis() { return getToken(AngularParser.RightParenthesis, 0); }
		public List<ComponentMetaDataContext> componentMetaData() {
			return getRuleContexts(ComponentMetaDataContext.class);
		}
		public ComponentMetaDataContext componentMetaData(int i) {
			return getRuleContext(ComponentMetaDataContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(AngularParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AngularParser.Comma, i);
		}
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_component);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(AngularDecorator);
			setState(166);
			match(LeftParenthesis);
			setState(167);
			match(LeftCurlyBrace);
			setState(173);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(168);
					componentMetaData();
					setState(169);
					match(Comma);
					}
					} 
				}
				setState(175);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(176);
				componentMetaData();
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Comma) {
					{
					setState(177);
					match(Comma);
					}
				}

				}
			}

			setState(182);
			match(RightCurlyBrace);
			setState(183);
			match(RightParenthesis);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentMetaDataContext extends ParserRuleContext {
		public ComponentMetaDataKeyContext componentMetaDataKey() {
			return getRuleContext(ComponentMetaDataKeyContext.class,0);
		}
		public ComponentMetaDataValueContext componentMetaDataValue() {
			return getRuleContext(ComponentMetaDataValueContext.class,0);
		}
		public ComponentMetaDataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentMetaData; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentMetaData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentMetaData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentMetaData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentMetaDataContext componentMetaData() throws RecognitionException {
		ComponentMetaDataContext _localctx = new ComponentMetaDataContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_componentMetaData);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			componentMetaDataKey();
			setState(186);
			componentMetaDataValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentMetaDataKeyContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode Colon() { return getToken(AngularParser.Colon, 0); }
		public ComponentMetaDataKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentMetaDataKey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentMetaDataKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentMetaDataKey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentMetaDataKey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentMetaDataKeyContext componentMetaDataKey() throws RecognitionException {
		ComponentMetaDataKeyContext _localctx = new ComponentMetaDataKeyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_componentMetaDataKey);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			identifier();
			setState(189);
			match(Colon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentMetaDataValueContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VariableAccessingContext variableAccessing() {
			return getRuleContext(VariableAccessingContext.class,0);
		}
		public ComponentMetaDataValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentMetaDataValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentMetaDataValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentMetaDataValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentMetaDataValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentMetaDataValueContext componentMetaDataValue() throws RecognitionException {
		ComponentMetaDataValueContext _localctx = new ComponentMetaDataValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_componentMetaDataValue);
		try {
			setState(193);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case True:
			case False:
			case MultiLinesString:
			case DoubleQuotationString:
			case SingleQuotationString:
			case NUMBER:
			case LeftParenthesis:
			case LeftCurlyBrace:
			case LeftSquareBracket:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				value();
				}
				break;
			case This:
			case Increment:
			case Decrement:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(192);
				variableAccessing();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportClassContext extends ParserRuleContext {
		public TerminalNode Export() { return getToken(AngularParser.Export, 0); }
		public ClassContext class_() {
			return getRuleContext(ClassContext.class,0);
		}
		public ExportClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterExportClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitExportClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitExportClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExportClassContext exportClass() throws RecognitionException {
		ExportClassContext _localctx = new ExportClassContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exportClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			match(Export);
			setState(196);
			class_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassContext extends ParserRuleContext {
		public TerminalNode Class() { return getToken(AngularParser.Class, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public ClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitClass(this);
			else return visitor.visitChildren(this);
		}
	}
